--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -2,24 +2,23 @@
 layout: default
 ---
 
-<div class="home">
+<div class="container">
+  <h1 class="center-align">Posts</h1>
+  {% comment %} {{ content }} {% endcomment %}
 
-  <h1 class="page-heading">Posts</h1>
-  
-  {{ content }}
-
-  <ul class="post-list">
-    {% for post in site.posts %}
-      <li>
-        <span class="post-meta">{{ post.date | date: "%b %-d, %Y" }}</span>
-
-        <h2>
-          <a class="post-link" href="{{ post.url | relative_url }}">{{ post.title | escape }}</a>
-        </h2>
-      </li>
-    {% endfor %}
-  </ul>
-
-  <p class="rss-subscribe">subscribe <a href="{{ "/feed.xml" | relative_url }}">via RSS</a></p>
-
+  {% for post in site.posts %}
+  <div class="row">
+    <div class="col s12 m12">
+      <div class="card">
+        <div class="card-content">
+          <div class="card-image">
+            <span class="card-title"><a class="post-link" href="{{ post.url | relative_url }}">{{ post.title | escape }}</a></span>
+            <span class="post-meta">{{ post.date | date: "%b %-d, %Y" }}</span>
+          </div>
+          <p>{{ post.content | strip_html | truncatewords:31}}<br></p><a href="{{ post.url }}">Read more...</a><br><br>
+        </div>
+      </div>
+    </div>
+  </div>
+  {% endfor %}
 </div>
