--- a/_includes/home/scripts.html
+++ b/_includes/home/scripts.html
@@ -3,7 +3,7 @@
 <script>
     $(document).ready(function () {
         $.fn.fullpage({
-            anchors: ['bio', 'social'],
+            anchors: ['bio', 'social', 'about'],
             css3: true,
             fixedElements: '.site-notice',
             menu: '#menu',
